<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#75C1C1C1"
    tools:context=".Activity.AddPhotoActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            android:background="@color/design_default_color_primary_dark"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:titleTextColor="@color/white"
            app:menu="@menu/menu_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        android:src="@drawable/picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:srcCompat="@drawable/ic_launcher_foreground"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fltAddImg"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:elevation="501dp"
        app:backgroundTint="#8BFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView"
        app:layout_constraintVertical_bias="0.916"
        app:srcCompat="@drawable/file_image_plus_outline" />


    <ScrollView
        android:id="@+id/scrollNewCar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/containerNewCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtNamePhoto"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:hint="@string/name_photo"
                android:maxLines="1"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textColorHint="#94252424"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/rounded_edittext_background"/>

            <EditText
                android:id="@+id/edtDetalleFoto"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:padding="10dp"
                android:ellipsize="end"
                android:textSize="15sp"
                android:hint="@string/details_photo"
                android:textColorHint="#94252424"
                android:maxLines="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/rounded_edittext_background"
                app:layout_constraintEnd_toEndOf="@+id/edtNamePhoto"
                app:layout_constraintStart_toStartOf="@+id/edtNamePhoto"
                app:layout_constraintTop_toBottomOf="@+id/edtNamePhoto"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textViewFilePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="15dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/text_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollNewCar"
        app:layout_constraintStart_toStartOf="@+id/scrollNewCar"
        app:layout_constraintTop_toBottomOf="@+id/scrollNewCar"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        style="@style/Theme.AppCompat.Light"/>

</androidx.constraintlayout.widget.ConstraintLayout>